Se agrega un poco de contenido y se ajusta codigo

--- a/about-me.html
+++ b/about-me.html
@@ -136,7 +136,7 @@
             <img class="photo-aboutme" src="resources/images/aboutme/photo3.jpg" alt="niña anabella">
         </div>
         <div class="photo-three-aboutme">
-            <img class="photo-aboutme" src="resources/images/aboutme/photo2.jpg" alt="miyuki">
+            <img class="photo-aboutme" src="resources/images/aboutme/photo4.jpg" alt="Anabella">
         </div>
 
         <div class="photo-four-aboutme">
