--- a/portfolio.html
+++ b/portfolio.html
@@ -70,43 +70,189 @@
             <!-- fin de menú principal -->
         </div>
         <div class="content-one-grid-portfolio">
-            <div class="portfolio-container">
-                <div class="portfolio-1">
-                    <div class="portfolio-imagen1"><img src="resources/images/portfolio/penny.jpg"
-                            alt="imagen de penny">
+
+            <!-- comienzo de tarjeta -->
+            <div class="card mb-3" style="max-width: 500px;">
+                <div class="row g-0 align-middle">
+                    <div class="col-md-4 imagen-card-container">
+                        <img src="resources/images/ejemplo1.jpg" class="rounded-start imagen-card" alt="Porfolio 1">
                     </div>
-                    <div class="portfolio-texto1">
-                        <article>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Neque, officiis! Id a at
-                            dolores nemo commodi velit sapiente accusamus unde illum! Quos reprehenderit animi sunt
-                            molestiae. Cupiditate neque suscipit corrupti.
-                            Molestias, repellat tenetur inventore consectetur aliquid error optio porro magnam ad quam
-                            numquam odit harum illum cupiditate itaque iusto et ducimus. A ad fuga cupiditate eius quo
-                            eaque molestiae aliquid.</article>
+                    <div class="col-md-8">
+                        <div class="card-body">
+                            <h5 class="card-title">Ejemplo 1</h5>
+                            <p class="card-text">El contenido del portfolio será agregado mas adelante</p>
+                            <!-- Button trigger modal -->
+                            <button type="button" class="btn btn-primary" data-bs-toggle="modal"
+                                data-bs-target="#staticBackdrop1">
+                                Ver la imagen
+                            </button>
+
+                            <!-- Modal -->
+                            <div class="modal fade" id="staticBackdrop1" data-bs-backdrop="static"
+                                data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel"
+                                aria-hidden="true">
+                                <div class="modal-dialog">
+                                    <div class="modal-content">
+                                        <div class="modal-header">
+                                            <h5 class="modal-title" id="staticBackdropLabel">Ejemplo 1</h5>
+                                            <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                                aria-label="Close"></button>
+                                        </div>
+                                        <div class="modal-body">
+                                            <img src="resources/images/ejemplo1.jpg" alt="Ejemplo 1">
+                                        </div>
+                                        <div class="modal-footer">
+                                            <button type="button" class="btn btn-secondary"
+                                                data-bs-dismiss="modal">Close</button>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- Fin de Modal -->
+                        </div>
                     </div>
                 </div>
             </div>
+            <!-- fin de tarjeta  -->
+
+            <!-- comienzo de tarjeta -->
+            <div class="card mb-3" style="max-width: 500px;">
+                <div class="row g-0">
+                    <div class="col-md-4 imagen-card-container">
+                        <img src="resources/images/portfolio/penny.jpg" class="rounded-start imagen-card" alt="penny">
+                    </div>
+                    <div class="col-md-8">
+                        <div class="card-body">
+                            <h5 class="card-title">Penny</h5>
+                            <p class="card-text">Aquí va una descripción del trabajo a pedido</p>
+                            <!-- Button trigger modal -->
+                            <button type="button" class="btn btn-primary" data-bs-toggle="modal"
+                                data-bs-target="#staticBackdrop2">
+                                Ver la imagen
+                            </button>
+
+                            <!-- Modal -->
+                            <div class="modal fade" id="staticBackdrop2" data-bs-backdrop="static"
+                                data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel"
+                                aria-hidden="true">
+                                <div class="modal-dialog">
+                                    <div class="modal-content">
+                                        <div class="modal-header">
+                                            <h5 class="modal-title" id="staticBackdropLabel">Penny</h5>
+                                            <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                                aria-label="Close"></button>
+                                        </div>
+                                        <div class="modal-body">
+                                            <img src="resources/images/portfolio/penny.jpg" alt="Penny">
+                                        </div>
+                                        <div class="modal-footer">
+                                            <button type="button" class="btn btn-secondary"
+                                                data-bs-dismiss="modal">Close</button>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- Fin de Modal -->
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- fin de tarjeta  -->
         </div>
+
         <div class="content-two-grid-portfolio">
-            <div class="portfolio-container">
-                <div class="portfolio-2">
-                    <div class="portfolio-texto2">
-                        <article>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam dolor doloribus illum
-                            rem
-                            veritatis, unde nam fugiat ducimus cumque eum cum corporis assumenda sed enim voluptas
-                            nesciunt
-                            quo. A, ab.
-                            Sapiente dignissimos quis perferendis dolorum eaque, sequi beatae, pariatur nihil ad
-                            distinctio
-                            deleniti autem sint labore est nulla commodi maiores totam. Ab adipisci sapiente nulla fugit
-                            doloremque est et labore!</article>
+            <!-- comienzo de tarjeta -->
+            <div class="card mb-3" style="max-width: 500px;">
+                <div class="row g-0 align-middle">
+                    <div class="col-md-4 imagen-card-container">
+                        <img src="resources/images/portfolio/sketch2.jpg" class="rounded-start imagen-card" alt="sketch 2">
                     </div>
-                    <div class="portfolio-imagen2"><img src="resources/images/portfolio/sketch2.jpg" alt="sketch 2">
+                    <div class="col-md-8">
+                        <div class="card-body">
+                            <h5 class="card-title">Sketch 2</h5>
+                            <p class="card-text">El contenido del portfolio será agregado mas adelante</p>
+                            <!-- Button trigger modal -->
+                            <button type="button" class="btn btn-primary" data-bs-toggle="modal"
+                                data-bs-target="#staticBackdrop3">
+                                Ver la imagen
+                            </button>
+
+                            <!-- Modal -->
+                            <div class="modal fade" id="staticBackdrop3" data-bs-backdrop="static"
+                                data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel"
+                                aria-hidden="true">
+                                <div class="modal-dialog">
+                                    <div class="modal-content">
+                                        <div class="modal-header">
+                                            <h5 class="modal-title" id="staticBackdropLabel">Sketch 2</h5>
+                                            <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                                aria-label="Close"></button>
+                                        </div>
+                                        <div class="modal-body">
+                                            <img src="resources/images/portfolio/sketch2.jpg" alt="Sketch 2">
+                                        </div>
+                                        <div class="modal-footer">
+                                            <button type="button" class="btn btn-secondary"
+                                                data-bs-dismiss="modal">Close</button>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- Fin de Modal -->
+                        </div>
                     </div>
                 </div>
             </div>
+            <!-- fin de tarjeta  -->
+
+            <!-- comienzo de tarjeta -->
+            <div class="card mb-3" style="max-width: 500px;">
+                <div class="row g-0 align-middle">
+                    <div class="col-md-4 imagen-card-container">
+                        <img src="resources/images/trabajos/sanvalentin2019 BG1.jpg" class="rounded-start imagen-card" alt="San valentin 2019">
+                    </div>
+                    <div class="col-md-8">
+                        <div class="card-body">
+                            <h5 class="card-title">San Valentín 2019</h5>
+                            <p class="card-text">El contenido del portfolio será agregado mas adelante</p>
+                            <!-- Button trigger modal -->
+                            <button type="button" class="btn btn-primary" data-bs-toggle="modal"
+                                data-bs-target="#staticBackdrop4">
+                                Ver la imagen
+                            </button>
+
+                            <!-- Modal -->
+                            <div class="modal fade" id="staticBackdrop4" data-bs-backdrop="static"
+                                data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel"
+                                aria-hidden="true">
+                                <div class="modal-dialog">
+                                    <div class="modal-content">
+                                        <div class="modal-header">
+                                            <h5 class="modal-title" id="staticBackdropLabel">San Valentín 2019</h5>
+                                            <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                                aria-label="Close"></button>
+                                        </div>
+                                        <div class="modal-body">
+                                            <img src="resources/images/trabajos/sanvalentin2019 BG1.jpg" alt="San Valentin 2019">
+                                        </div>
+                                        <div class="modal-footer">
+                                            <button type="button" class="btn btn-secondary"
+                                                data-bs-dismiss="modal">Close</button>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- Fin de Modal -->
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- fin de tarjeta  -->
         </div>
+
+        <!-- inicio de footer -->
         <div class="footer-grid-portfolio">
-            <!-- inicio de footer -->
+
             <footer>
                 <div>
                     <p><b>¡Gracias!</b></p>
@@ -138,8 +284,8 @@
                     <p><b>© Anabella Avena 2022. All rights Reserved.</b></p>
                 </div>
             </footer>
-            <!-- fin de footer -->
         </div>
+        <!-- fin de footer -->
     </div>
 
     <!-- Scripts -->
