--- a/tienda.html
+++ b/tienda.html
@@ -104,8 +104,7 @@
                             alt="san valentin">
                         <div class="card-body">
                             <h5 class="card-title">San Valentín 2020</h5>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
-                                of the card's content.</p>
+                            <p class="card-text">Estas tarjetas muestran productos a vender y un link a la tienda donde se vende.</p>
                             <a href="#" class="btn btn-primary">ver mas aquí</a>
                         </div>
                     </div>
@@ -113,8 +112,7 @@
                         <img src="resources/images/trabajos/minutemen.jpg" class="card-img-top" alt="Minutemen">
                         <div class="card-body">
                             <h5 class="card-title">Minutemen</h5>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
-                                of the card's content.</p>
+                            <p class="card-text">Estas tarjetas muestran productos a vender y un link a la tienda donde se vende.</p>
                             <a href="#" class="btn btn-primary">ver mas aquí</a>
                         </div>
                     </div>
@@ -122,8 +120,7 @@
                         <img src="resources/images/trabajos/illustracion.jpg" class="card-img-top" alt="Ilustracion">
                         <div class="card-body">
                             <h5 class="card-title">Ilustraciones</h5>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
-                                of the card's content.</p>
+                            <p class="card-text">Estas tarjetas muestran productos a vender y un link a la tienda donde se vende.</p>
                             <a href="#" class="btn btn-primary">ver mas aquí</a>
                         </div>
                 </section>
@@ -145,8 +142,7 @@
                         <img src="resources/images/trabajos/minutemen.jpg" class="card-img-top" alt="Minutemen">
                         <div class="card-body">
                             <h5 class="card-title">Minutemen</h5>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
-                                of the card's content.</p>
+                            <p class="card-text">Estas tarjetas muestran productos a vender y un link a la tienda donde se vende.</p>
                             <a href="#" class="btn btn-primary">ver mas aquí</a>
                         </div>
                     </div>
@@ -154,8 +150,7 @@
                         <img src="resources/images/trabajos/illustracion.jpg" class="card-img-top" alt="Ilustracion">
                         <div class="card-body">
                             <h5 class="card-title">Ilustraciones</h5>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
-                                of the card's content.</p>
+                            <p class="card-text">Estas tarjetas muestran productos a vender y un link a la tienda donde se vende.</p>
                             <a href="#" class="btn btn-primary">ver mas aquí</a>
                         </div>
                     </div>
@@ -163,8 +158,7 @@
                         <img src="resources/images/trabajos/historieta.jpg" class="card-img-top" alt="Historieta">
                         <div class="card-body">
                             <h5 class="card-title">Historietas</h5>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
-                                of the card's content.</p>
+                            <p class="card-text">Estas tarjetas muestran productos a vender y un link a la tienda donde se vende.</p>
                             <a href="#" class="btn btn-primary">ver mas aquí</a>
                         </div>
                     </div>
